# sc-haskell

./: .gitmodules  DEVLOG.md  Dockerfile  Dockerfile.in  Dockerfile_opt-dbg  GHC_BUG.txt  Makefile  README.md  jenkins_benchmark_webservers.sh
SurveyScripts/: CompileBusted.hs  ConnectedDDefs.hs  GrabNewestPerPackage.hs  GrabStackageCabals.hs  Makefile  README.md  SurveyScripts.cabal  UntarFiles.hs  hackage-mirror.sh  jenkins.sh  stack.yaml
SurveyScripts/stackage/: package-list-5.10.txt
arm_bug/: Hello.hs  Makefile
arm_bug/dumps/: Hello.dump-cmm  Hello.dump-ds  Hello.dump-llvm  Hello.dump-opt-cmm  Hello.dump-simpl  Hello.dump-simpl-stats  Hello.dump-stg
arm_bug/dumps_O2/: Hello.dump-cmm  Hello.dump-ds  Hello.dump-llvm  Hello.dump-opt-cmm  Hello.dump-simpl  Hello.dump-simpl-stats  Hello.dump-stg
arm_bug/dumps_dowrite/: Hello.dump-cmm  Hello.dump-ds  Hello.dump-llvm  Hello.dump-opt-cmm  Hello.dump-simpl  Hello.dump-simpl-stats  Hello.dump-stg
arm_bug/dumps_dowrite2/: Hello.dump-cmm  Hello.dump-ds  Hello.dump-llvm  Hello.dump-opt-cmm  Hello.dump-simpl  Hello.dump-simpl-stats  Hello.dump-stg
benchmarking/: .cached-lts-5.16  .cached-lts-5.16-everything  .gitignore  Benchmark.hs  Critanalyze.hs  SafetyTest.hs  benchmark-via-jenkins.sh  cabal.config  lorem-ipsum.txt  safety-via-jenkins.sh
benchmarking/sc-haskell-benchmarking/: Dockerfile  entrypoint.sh
benchmarking/testdir1/: test.csv
dot-prod-bench/: Main.hs  hsdot.cabal
experiment1/: experiment1.cabal
microbenchmarks/: STRealWorld.hs
sc-haskell-opt/: Dockerfile
server_benchmark/: DEVLOG.md
(+14 files in other folders)
