name:                hsdot
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             PublicDomain
license-file:        LICENSE
author:              Michael Vollmer
maintainer:          vollmerm@indiana.edu
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable hsdot
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9, array, criterion
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options: -Wall -O3 -threaded -with-rtsopts=-N


